Fix bug where nav dropdown wouldn't appear over the photo on the show page (added z-index in css

--- a/app/assets/stylesheets/base/nav.scss
+++ b/app/assets/stylesheets/base/nav.scss
@@ -45,6 +45,7 @@
   display: flex;
   justify-content: space-between;
   width: 450px;
+  z-index: 2;
 }
 
 .main-nav-links a {
